updated spark processing

--- a/1_create_aws_resources.ipynb
+++ b/1_create_aws_resources.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "eac93db5-af70-4d6b-ac45-c3b863f6ca8a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Provision AWS Resources to allow Kinesis Firehose to Stream Data to S3 Bucket"
    ]
@@ -94,7 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aws_region = os.getenv(\"AWS_REGION\")"
+    "aws_region = os.getenv(\"AWS_REGION\")\n",
+    "s3_bucket_name = os.getenv(\"AWS_S3_BUCKET_NAME\")"
    ]
   },
   {
@@ -148,9 +151,6 @@
    },
    "outputs": [],
    "source": [
-    "# S3\n",
-    "s3_bucket_name = \"sagemakertestwillz3s\"\n",
-    "\n",
     "# IAM Role\n",
     "iam_role_path = \"/\"\n",
     "iam_role_name = \"kinesis-firehose-role\"\n",
@@ -244,7 +244,7 @@
    "id": "a65fd66b-40a0-49df-9e62-214cd9701f31",
    "metadata": {},
    "source": [
-    "## Create the S3 Bucket"
+    "## (Optional) Create the S3 Bucket"
    ]
   },
   {
@@ -255,8 +255,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "s3_bucket_creation_response = s3b.create_s3_bucket(s3_bucket_name, aws_region)\n",
-    "s3_bucket_creation_response"
+    "if s3_bucket_name:\n",
+    "    s3_bucket_creation_response = s3b.create_s3_bucket(s3_bucket_name, aws_region)\n",
+    "    print(s3_bucket_creation_response)"
    ]
   },
   {
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "6063da7d-ed28-4eb8-94c0-e382287497f1",
    "metadata": {
     "tags": []
@@ -365,17 +366,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 35.8 ms, sys: 0 ns, total: 35.8 ms\n",
-      "Wall time: 209 ms\n"
+      "CPU times: user 53.8 ms, sys: 0 ns, total: 53.8 ms\n",
+      "Wall time: 257 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[['mypolicy', '2021-12-27 02:25:07']]"
+       "[['mypolicy', '2021-12-28 19:40:06']]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,12 +422,12 @@
    "metadata": {},
    "source": [
     "**Note**\n",
-    "1. The creation of this IAM role must be completed before the role can be used. After running the command above to create the role, it will be necessary to wait for a few seconds before the newly created role can be assumed by Kinesis Firehose when it is created next. For this reason, we will now pause before proceeding to create the Kinesis Firehost delivery stream."
+    "1. The creation of this IAM role must be completed before the role can be used. After running the command above to create the role, it will be necessary to wait for a few seconds before the newly created role can be assumed by Kinesis Firehose when it is created next. For this reason, we will now pause before proceeding to create the Kinesis Firehose delivery stream."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "3e9d14c3-5bc4-49b5-9282-34b9c75c94b4",
    "metadata": {},
    "outputs": [],
@@ -495,10 +496,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d54d6a19-2c1f-44fb-be6d-722cdb9656d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found VPC: vpc-921bebf9. Created Security Group allow-inbound-ssh\n",
+      "CPU times: user 120 ms, sys: 3.79 ms, total: 124 ms\n",
+      "Wall time: 946 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "ec2h.create_security_group(\n",
@@ -535,7 +546,8 @@
     "ssh_key_creation_response = ssh_keys.create_key_pair(\n",
     "    keypair_name,\n",
     "    aws_region,\n",
-    "    \"/tmp\",\n",
+    "    # \"/tmp\",\n",
+    "    os.path.expanduser(\"~/.ssh\"),\n",
     "    key_fname,\n",
     "    [{\"Key\": \"Name\", \"Value\": \"my-ssh-key-pair\"}],\n",
     ")\n",
@@ -552,23 +564,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "715f74ea-9b6c-4efb-bfe4-d5ad89b7780c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/tmp/aws_ec2_key.pem']"
+       "['/home/elsdes3/.ssh/aws_ec2_key.pem']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "glob(f\"/tmp/{key_fname}*.pem\")"
+    "glob(os.path.join(os.path.expanduser(\"~/.ssh\"), f\"{key_fname}*.pem\"))"
    ]
   },
   {
@@ -615,7 +627,7 @@
     "%%time\n",
     "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"allow-inbound-ssh\"]}])\n",
     "ec2_instance_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ec2-instance\"]}])\n",
-    "ec2h.attach_sg_to_ec2_instance(sg_filter, ec2_instance_filter, 0, -1, aws_region)"
+    "ec2h.attach_sg_to_ec2_instance(sg_filter, ec2_instance_filter, 0, 0, aws_region)"
    ]
   },
   {
@@ -666,7 +678,7 @@
    "source": [
     "pbu.replace_inventory_host_ip(\n",
     "    ansible_inventory_host_vars_fpath,\n",
-    "    ec2_instances_list[-1][\"public_dns_name\"],\n",
+    "    ec2_instances_list[0][\"public_dns_name\"],\n",
     ")"
    ]
   }
