--- a/2_create_sagemaker_resources.ipynb
+++ b/2_create_sagemaker_resources.ipynb
@@ -102,6 +102,7 @@
     "In this notebook, the following resources related to AWS SageMaker will be created\n",
     "- (optional) S3 bucket\n",
     "- IAM role granting SageMaker full access to a single S3 bucket\n",
+    "  - this will be created using the AWS console\n",
     "- EC2 Security group for the SageMaker instance\n",
     "- CloudWatch Logging group for the SageMaker instance\n",
     "- SageMaker notebook instance\n",
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "31c8b84f-5b35-4c49-b6c5-135556a35b8c",
    "metadata": {
     "tags": [
@@ -141,7 +142,7 @@
     "s3_bucket_name = \"\"\n",
     "\n",
     "# IAM Role\n",
-    "iam_role_name = \"AmazonSageMaker-ExecutionRole-20211228T122046\"\n",
+    "iam_role_name = \"AmazonSageMaker-ExecutionRole-20211228T145043\"\n",
     "\n",
     "# EC2 Security Groups\n",
     "sg_group_name = \"mysgname\"\n",
@@ -192,8 +193,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5 µs, sys: 1 µs, total: 6 µs\n",
-      "Wall time: 9.54 µs\n"
+      "CPU times: user 1 µs, sys: 1 µs, total: 2 µs\n",
+      "Wall time: 2.62 µs\n"
      ]
     }
    ],
@@ -218,7 +219,7 @@
    "source": [
     "Currently, an IAM role granting Sagemaker appropriate S3 access must be created from the AWS console.\n",
     "\n",
-    "To do this, [start](https://docs.aws.amazon.com/sagemaker/latest/dg/howitworks-create-ws.html) the process of creating of a Sagemaker instance through the console and an IAM role should be created manually following instructions [here](https://docs.aws.amazon.com/glue/latest/dg/create-an-iam-role-sagemaker-notebook.html). This role should only be given access to **one pre-existing S3 bucket**, whose name contains the word *sagemaker*, and **not to all S3 buckets**. After the IAM role is created, the Sagemaker instance creation process can be canceled as the instance will be programmatically created later in this notebook."
+    "To do this, [start](https://docs.aws.amazon.com/sagemaker/latest/dg/howitworks-create-ws.html) the process of creating of a Sagemaker instance through the console and an IAM role should be created manually following instructions [here](https://docs.aws.amazon.com/glue/latest/dg/create-an-iam-role-sagemaker-notebook.html). From the SageMaker notebooks page, choose the option to create a new notebook. On the notebook creation screen, the role is to be created in the **Permissions and encryption** section. Select the option to create a new role. This role should only be given access to **one pre-existing S3 bucket** (select *Specific S3 buckets*), whose name contains the word *sagemaker*, and **not to all S3 buckets**. After the IAM role is created, the Sagemaker instance creation process can be canceled as the instance will be programmatically created later in this notebook."
    ]
   },
   {
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "caa48c16-5941-43fc-89c4-2c167a0e545d",
    "metadata": {},
    "outputs": [],
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "aad0f506-eb55-49c6-b86d-79586fe5b881",
    "metadata": {},
    "outputs": [
@@ -355,8 +356,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.3 ms, sys: 308 µs, total: 10.6 ms\n",
-      "Wall time: 212 ms\n"
+      "CPU times: user 11 ms, sys: 285 µs, total: 11.3 ms\n",
+      "Wall time: 244 ms\n"
      ]
     }
    ],
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ac2f0c62-a1d0-4a28-90dd-3b3828962331",
    "metadata": {},
    "outputs": [],
