--- a/5_delete_sagemaker_resources.ipynb
+++ b/5_delete_sagemaker_resources.ipynb
@@ -144,6 +144,7 @@
     "# IAM\n",
     "iam_role_name = \"AmazonSageMaker-ExecutionRole-20211228T122046\"\n",
     "iam_policy_name = \"AmazonSageMaker-ExecutionPolicy-20211228T122046\"\n",
+    "delete_sagemaker_s3_iam_role = \"no\"\n",
     "\n",
     "# EC2 Security Groups\n",
     "sg_group_name = \"mysgname\"\n",
@@ -363,7 +364,7 @@
    "id": "de132331-e605-4988-a679-df59b9077278",
    "metadata": {},
    "source": [
-    "### Delete IAM Sagemaker-S3 Policy"
+    "### (Optional) Delete IAM Sagemaker-S3 Policy"
    ]
   },
   {
@@ -381,7 +382,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iam_sagemaker_s3_policy_list = iamr.get_iam_policies(aws_region, attached=True)"
+    "if delete_sagemaker_s3_iam_role == \"yes\":\n",
+    "    iam_sagemaker_s3_policy_list = iamr.get_iam_policies(aws_region, attached=True)"
    ]
   },
   {
@@ -402,14 +404,15 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "iam_policy_list = [\n",
-    "    iam_sagemaker_s3_policy\n",
-    "    for iam_sagemaker_s3_policy in iam_sagemaker_s3_policy_list\n",
-    "    if iam_sagemaker_s3_policy[\"PolicyName\"] == iam_policy_name\n",
-    "]\n",
-    "iam_policy_dict = iam_policy_list[0]\n",
-    "print(iam_policy_list)\n",
-    "print(iam_policy_dict)"
+    "if delete_sagemaker_s3_iam_role == \"yes\":\n",
+    "    iam_policy_list = [\n",
+    "        iam_sagemaker_s3_policy\n",
+    "        for iam_sagemaker_s3_policy in iam_sagemaker_s3_policy_list\n",
+    "        if iam_sagemaker_s3_policy[\"PolicyName\"] == iam_policy_name\n",
+    "    ]\n",
+    "    iam_policy_dict = iam_policy_list[0]\n",
+    "    print(iam_policy_list)\n",
+    "    print(iam_policy_dict)"
    ]
   },
   {
@@ -430,11 +433,12 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "policy_detachment_response, policy_deletion_response = iamr.delete_iam_policy(\n",
-    "    iam_policy_dict[\"Arn\"], iam_role_name, aws_region\n",
-    ")\n",
-    "print(policy_detachment_response)\n",
-    "print(policy_deletion_response)"
+    "if delete_sagemaker_s3_iam_role == \"yes\":\n",
+    "    policy_detachment_response, policy_deletion_response = iamr.delete_iam_policy(\n",
+    "        iam_policy_dict[\"Arn\"], iam_role_name, aws_region\n",
+    "    )\n",
+    "    print(policy_detachment_response)\n",
+    "    print(policy_deletion_response)"
    ]
   },
   {
@@ -454,17 +458,19 @@
    },
    "outputs": [],
    "source": [
-    "iam_policy_list = [\n",
-    "    iam_sagemaker_s3_policy\n",
-    "    for iam_sagemaker_s3_policy in iam_sagemaker_s3_policy_list\n",
-    "    if iam_sagemaker_s3_policy[\"PolicyName\"] == \"AmazonSageMakerFullAccess\"\n",
-    "]\n",
-    "iam_policy_dict = iam_policy_list[0]\n",
-    "policy_detachment_response, policy_deletion_response = iamr.delete_iam_policy(\n",
-    "    iam_policy_dict[\"Arn\"], iam_role_name, aws_region, delete=False\n",
-    ")\n",
-    "print(policy_detachment_response)\n",
-    "print(policy_deletion_response)"
+    "%%time\n",
+    "if delete_sagemaker_s3_iam_role == \"yes\":\n",
+    "    iam_policy_list = [\n",
+    "        iam_sagemaker_s3_policy\n",
+    "        for iam_sagemaker_s3_policy in iam_sagemaker_s3_policy_list\n",
+    "        if iam_sagemaker_s3_policy[\"PolicyName\"] == \"AmazonSageMakerFullAccess\"\n",
+    "    ]\n",
+    "    iam_policy_dict = iam_policy_list[0]\n",
+    "    policy_detachment_response, policy_deletion_response = iamr.delete_iam_policy(\n",
+    "        iam_policy_dict[\"Arn\"], iam_role_name, aws_region, delete=False\n",
+    "    )\n",
+    "    print(policy_detachment_response)\n",
+    "    print(policy_deletion_response)"
    ]
   },
   {
@@ -482,7 +488,7 @@
    "id": "4b138779-9288-4cf7-8ef1-f82b5724109c",
    "metadata": {},
    "source": [
-    "### Delete IAM Role"
+    "### (Optional) Delete IAM Role"
    ]
   },
   {
