--- a/6_delete_aws_resources.ipynb
+++ b/6_delete_aws_resources.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "a5c0fec3-42d3-44f7-b241-de7e1458795b",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8f1a15e8-0671-4a4d-ab1b-3c6a7adf639f",
    "metadata": {
     "tags": [
@@ -149,7 +149,7 @@
    "outputs": [],
    "source": [
     "# S3\n",
-    "s3_bucket_name = \"sagemakertestwillz3s\"\n",
+    "s3_bucket_name = \"\"\n",
     "\n",
     "# IAM Role\n",
     "iam_role_name = \"kinesis-firehose-role\"\n",
@@ -204,7 +204,9 @@
       "ansible_connection: ssh\n",
       "ansible_user: ec2-user\n",
       "ansible_python_interpreter: /usr/bin/python3\n",
-      "ansible_ssh_private_key_file: /tmp/aws_ec2_key.pem\n"
+      "ansible_ssh_private_key_file: /tmp/aws_ec2_key.pem\n",
+      "CPU times: user 1.13 ms, sys: 148 µs, total: 1.28 ms\n",
+      "Wall time: 755 µs\n"
      ]
     }
    ],
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "a4d69c9c-46ec-49a4-871b-55f20b188232",
    "metadata": {},
    "outputs": [
@@ -237,8 +239,8 @@
       "ansible_user: ec2-user\n",
       "ansible_python_interpreter: /usr/bin/python2.7\n",
       "ansible_ssh_private_key_file: /tmp/aws_ec2_key.pem\n",
-      "CPU times: user 0 ns, sys: 1.33 ms, total: 1.33 ms\n",
-      "Wall time: 839 µs\n"
+      "CPU times: user 724 µs, sys: 94 µs, total: 818 µs\n",
+      "Wall time: 507 µs\n"
      ]
     }
    ],
@@ -299,10 +301,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8153290b-5f83-4b2a-bfad-d4d1364150a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 31.3 ms, sys: 0 ns, total: 31.3 ms\n",
+      "Wall time: 218 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "ec2_instance_filter = dict(\n",
@@ -333,10 +344,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "87f18efc-4d8a-4e6a-9bb1-786b632002a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 19 ms, sys: 0 ns, total: 19 ms\n",
+      "Wall time: 174 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "key_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"my-ssh-key-pair\"]}])\n",
@@ -353,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "19fc63eb-b9cf-4254-98c8-ae32781834ad",
    "metadata": {},
    "outputs": [],
@@ -363,18 +383,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "97617da9-6acd-40a6-8c81-db233734b432",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleted Security Group sg-08d9975f57751369f\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"allow-inbound-ssh\"]}])\n",
@@ -384,10 +396,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "edfe8395-2de4-4a14-b0b7-6e7b866a1ca2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 28.8 ms, sys: 0 ns, total: 28.8 ms\n",
+      "Wall time: 323 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "sg_filter = dict(Filters=[{\"Name\": \"tag:Name\", \"Values\": [\"allow-inbound-ssh\"]}])\n",
@@ -404,12 +425,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "b61a5023-17d8-47a7-8f3c-b468c0322b02",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 37.7 ms, sys: 0 ns, total: 37.7 ms\n",
+      "Wall time: 336 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "firehose_deletion_response = knsfire.delete_kinesis_firehose_stream(\n",
@@ -496,10 +526,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "70e918a6-00ff-4449-9a75-709dbe50ddab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 41.6 ms, sys: 0 ns, total: 41.6 ms\n",
+      "Wall time: 279 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "iam_role_deletion_response = iamr.delete_iam_role(iam_role_name, aws_region)\n",
@@ -516,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "bdd98e4e-b389-48e3-ad43-e55b1e5a5a90",
    "metadata": {
     "tags": []
@@ -526,8 +565,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 88.3 ms, sys: 4.67 ms, total: 93 ms\n",
-      "Wall time: 513 ms\n"
+      "CPU times: user 89 ms, sys: 5.22 ms, total: 94.2 ms\n",
+      "Wall time: 561 ms\n"
      ]
     }
    ],
@@ -543,12 +582,12 @@
    "id": "cbbf8af8-34e7-4863-be1a-3b95cbd93b7c",
    "metadata": {},
    "source": [
-    "## Delete the S3 Bucket"
+    "## (Optional) Delete the S3 Bucket"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "db79efeb-e9e5-423d-8185-9ee79f95fb7b",
    "metadata": {},
    "outputs": [
@@ -556,15 +595,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bucket sagemakertestwillz3s has been cleaned up\n",
-      "Bucket sagemakertestwillz3s has been deleted\n"
+      "CPU times: user 12.6 ms, sys: 181 µs, total: 12.8 ms\n",
+      "Wall time: 161 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "s3_bucket_deletion_response = s3b.delete_s3_bucket(s3_bucket_name, aws_region)\n",
-    "s3b.check_s3_bucket_deletion(s3_bucket_name, aws_region)"
+    "if s3_bucket_name:\n",
+    "    s3_bucket_deletion_response = s3b.delete_s3_bucket(s3_bucket_name, aws_region)\n",
+    "    s3b.check_s3_bucket_deletion(s3_bucket_name, aws_region)"
    ]
   }
  ],
