cleand up old v2 nb

--- a/v2/old_do_not_use/5_get_sample_to_label_v2.ipynb
+++ b/v2/old_do_not_use/5_get_sample_to_label_v2.ipynb
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_bucket_name = os.getenv(\"AWS_S3_BUCKET_NAME\", \"sagemakertestwillz3s\")\n",
+    "s3_bucket_name = os.getenv(\"AWS_S3_BUCKET_NAME\")\n",
     "session = boto3.Session(profile_name=\"default\")\n",
     "s3_client = session.client(\"s3\")\n",
     "\n",
@@ -751,9 +751,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spark:Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-spark-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -765,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
