cleand up second old v2 nb

--- a/v2/3_prepare_data.ipynb
+++ b/v2/3_prepare_data.ipynb
@@ -368,7 +368,7 @@
    "source": [
     "load_dotenv(find_dotenv())\n",
     "aws_region = os.getenv(\"AWS_REGION\", default=\"us-east-2\")\n",
-    "s3_bucket_name = os.getenv(\"AWS_S3_BUCKET_NAME\", \"sagemakertestwillz3s\")\n",
+    "s3_bucket_name = os.getenv(\"AWS_S3_BUCKET_NAME\")\n",
     "\n",
     "joined_tweet_search_terms_no_spaces = [\n",
     "    t.replace(\" \", \"\") for t in joined_tweet_search_terms\n",
