created labeling splits for v2

--- a/v2/8_current_approach.ipynb
+++ b/v2/8_current_approach.ipynb
@@ -28,8 +28,8 @@
       "s3fs==0.4.2\n",
       "scikit-learn==1.1.2\n",
       "ipykernel                 6.15.1             pyh210e3f2_0    conda-forge\n",
-      "CPU times: user 25 ms, sys: 24.8 ms, total: 49.7 ms\n",
-      "Wall time: 2.2 s\n"
+      "CPU times: user 40.6 ms, sys: 13.4 ms, total: 54 ms\n",
+      "Wall time: 2.38 s\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "18cde7a8-036c-4074-bdfa-f2e70abeac54",
    "metadata": {
     "tags": [
@@ -113,9 +113,9 @@
    "source": [
     "label_mapper = {0: \"does_not_need_support\", 1: \"needs_support\"}\n",
     "\n",
-    "nrows = 230_000\n",
-    "partition_size = 23_000\n",
-    "frac_negative = 0.1  # for dummy data only\n",
+    "nrows = 172_000\n",
+    "partition_size = 21_000\n",
+    "frac_negative = 0.045  # for dummy data only\n",
     "\n",
     "test_split_frac = 0.125\n",
     "\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "9ca9c522-d115-4af0-8e18-9fec671e0c08",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "5a46c0f8-546c-4978-bbc0-67e1b07ab465",
    "metadata": {},
    "outputs": [
@@ -220,8 +220,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 26.6 ms, sys: 4.18 ms, total: 30.8 ms\n",
-      "Wall time: 33.3 ms\n"
+      "CPU times: user 14.6 ms, sys: 6.74 ms, total: 21.3 ms\n",
+      "Wall time: 22 ms\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "c0766fc8-9cc4-444f-8f0b-44edb365779d",
    "metadata": {},
    "outputs": [
@@ -247,8 +247,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.92 ms, sys: 0 ns, total: 1.92 ms\n",
-      "Wall time: 1.85 ms\n"
+      "CPU times: user 1.53 ms, sys: 205 µs, total: 1.74 ms\n",
+      "Wall time: 1.67 ms\n"
      ]
     }
    ],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "5306d872-add2-4bcc-bb4c-996188d34277",
    "metadata": {},
    "outputs": [
@@ -276,8 +276,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.15 ms, sys: 3.59 ms, total: 6.74 ms\n",
-      "Wall time: 5.5 ms\n"
+      "CPU times: user 9 ms, sys: 0 ns, total: 9 ms\n",
+      "Wall time: 9.22 ms\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "05151d93-fef9-4146-8738-0bfef5704e86",
    "metadata": {},
    "outputs": [
@@ -309,8 +309,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 91.8 ms, sys: 18.9 ms, total: 111 ms\n",
-      "Wall time: 74.2 ms\n"
+      "CPU times: user 70.3 ms, sys: 17.1 ms, total: 87.4 ms\n",
+      "Wall time: 87.5 ms\n"
      ]
     },
     {
@@ -341,13 +341,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>164352</td>\n",
-       "      <td>0.952677</td>\n",
+       "      <td>123292</td>\n",
+       "      <td>0.954842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>8164</td>\n",
-       "      <td>0.047323</td>\n",
+       "      <td>5831</td>\n",
+       "      <td>0.045158</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -355,11 +355,11 @@
       ],
       "text/plain": [
        "   num_tweets  frac_tweets\n",
-       "0      164352     0.952677\n",
-       "1        8164     0.047323"
+       "0      123292     0.954842\n",
+       "1        5831     0.045158"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "f6ded0de-88be-40c8-ba4f-bf18165cabef",
    "metadata": {},
    "outputs": [],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "5036d4ba-3833-4b34-bdae-6516d77e713b",
    "metadata": {},
    "outputs": [
@@ -422,8 +422,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 125 ms, sys: 13.4 ms, total: 138 ms\n",
-      "Wall time: 111 ms\n"
+      "CPU times: user 105 ms, sys: 18.2 ms, total: 123 ms\n",
+      "Wall time: 193 ms\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "b6289c82-7b90-4661-8f87-7a536eb742a7",
    "metadata": {},
    "outputs": [
@@ -450,8 +450,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 101 ms, sys: 19.4 ms, total: 120 ms\n",
-      "Wall time: 86.9 ms\n"
+      "CPU times: user 75.3 ms, sys: 25.6 ms, total: 101 ms\n",
+      "Wall time: 80.8 ms\n"
      ]
     },
     {
@@ -480,23 +480,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7680</th>\n",
+       "      <th>3725</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17617</th>\n",
+       "      <th>6935</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12574</th>\n",
+       "      <th>11244</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16571</th>\n",
+       "      <th>728</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4633</th>\n",
+       "      <th>17922</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -505,14 +505,14 @@
       ],
       "text/plain": [
        "       label\n",
-       "7680       0\n",
-       "17617      0\n",
-       "12574      1\n",
-       "16571      1\n",
-       "4633       0"
+       "3725       0\n",
+       "6935       0\n",
+       "11244      1\n",
+       "728        1\n",
+       "17922      0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "09910e4f-a820-4349-988b-9695760d4722",
    "metadata": {},
    "outputs": [
@@ -559,14 +559,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 41.5 ms, sys: 3.91 ms, total: 45.4 ms\n",
-      "Wall time: 29.2 ms\n"
+      "CPU times: user 37 ms, sys: 6.39 ms, total: 43.4 ms\n",
+      "Wall time: 51.5 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "y_test_computed = y_test.compute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "696b60cc-2b79-4f11-ba69-04646a0a74ce",
+   "metadata": {},
+   "source": [
+    "### Scoring Metrics"
    ]
   },
   {
@@ -579,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d444aa5d-144f-4494-8b7d-7b2628379680",
    "metadata": {},
    "outputs": [
@@ -615,11 +623,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.498317</td>\n",
-       "      <td>0.909578</td>\n",
-       "      <td>0.498317</td>\n",
-       "      <td>0.627628</td>\n",
-       "      <td>0.533046</td>\n",
+       "      <td>0.497134</td>\n",
+       "      <td>0.913809</td>\n",
+       "      <td>0.497134</td>\n",
+       "      <td>0.627629</td>\n",
+       "      <td>0.532078</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -628,7 +636,7 @@
       ],
       "text/plain": [
        "   accuracy  precision    recall  f1_score  f2_score split\n",
-       "0  0.498317   0.909578  0.498317  0.627628  0.533046  test"
+       "0  0.497134   0.913809  0.497134  0.627629  0.532078  test"
       ]
      },
      "metadata": {},
@@ -664,17 +672,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>does_not_need_support</th>\n",
-       "      <td>0.952225</td>\n",
-       "      <td>0.498544</td>\n",
-       "      <td>0.654447</td>\n",
-       "      <td>27466</td>\n",
+       "      <td>0.955040</td>\n",
+       "      <td>0.496628</td>\n",
+       "      <td>0.653455</td>\n",
+       "      <td>20317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>needs_support</th>\n",
-       "      <td>0.046389</td>\n",
-       "      <td>0.493736</td>\n",
-       "      <td>0.084810</td>\n",
-       "      <td>1357</td>\n",
+       "      <td>0.045722</td>\n",
+       "      <td>0.507772</td>\n",
+       "      <td>0.083890</td>\n",
+       "      <td>965</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -682,8 +690,8 @@
       ],
       "text/plain": [
        "                       precision    recall  f1-score  support\n",
-       "does_not_need_support   0.952225  0.498544  0.654447    27466\n",
-       "needs_support           0.046389  0.493736  0.084810     1357"
+       "does_not_need_support   0.955040  0.496628  0.653455    20317\n",
+       "needs_support           0.045722  0.507772  0.083890      965"
       ]
      },
      "metadata": {},
@@ -718,21 +726,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>does_not_need_support</th>\n",
-       "      <td>13693</td>\n",
-       "      <td>13773</td>\n",
-       "      <td>27466</td>\n",
+       "      <td>10090</td>\n",
+       "      <td>10227</td>\n",
+       "      <td>20317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>needs_support</th>\n",
-       "      <td>687</td>\n",
-       "      <td>670</td>\n",
-       "      <td>1357</td>\n",
+       "      <td>475</td>\n",
+       "      <td>490</td>\n",
+       "      <td>965</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total</th>\n",
-       "      <td>14380</td>\n",
-       "      <td>14443</td>\n",
-       "      <td>28823</td>\n",
+       "      <td>10565</td>\n",
+       "      <td>10717</td>\n",
+       "      <td>21282</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -740,9 +748,9 @@
       ],
       "text/plain": [
        "                       does_not_need_support  needs_support  total\n",
-       "does_not_need_support                  13693          13773  27466\n",
-       "needs_support                            687            670   1357\n",
-       "total                                  14380          14443  28823"
+       "does_not_need_support                  10090          10227  20317\n",
+       "needs_support                            475            490    965\n",
+       "total                                  10565          10717  21282"
       ]
      },
      "metadata": {},
@@ -752,8 +760,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 147 ms, sys: 15.1 ms, total: 162 ms\n",
-      "Wall time: 205 ms\n"
+      "CPU times: user 125 ms, sys: 0 ns, total: 125 ms\n",
+      "Wall time: 131 ms\n"
      ]
     }
    ],
@@ -804,6 +812,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1aa277e9-2b50-4ed9-877a-be2723fdc5f1",
+   "metadata": {},
+   "source": [
+    "### Business Metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "92d6ce65-9dda-42da-af5f-d1678a5a075c",
    "metadata": {},
    "source": [
@@ -820,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "b3b50b75-c9ce-493a-8b08-ea1cc9d50f45",
    "metadata": {},
    "outputs": [
@@ -853,9 +869,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>13086</td>\n",
-       "      <td>28823</td>\n",
-       "      <td>0.454012</td>\n",
+       "      <td>9752</td>\n",
+       "      <td>21282</td>\n",
+       "      <td>0.458228</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -863,13 +879,13 @@
       ],
       "text/plain": [
        "   number tweets unnecessarily read  total number tweets  \\\n",
-       "0                             13086                28823   \n",
+       "0                              9752                21282   \n",
        "\n",
        "   fraction tweets unnecessarily read  \n",
-       "0                            0.454012  "
+       "0                            0.458228  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,15 +925,15 @@
    "metadata": {},
    "source": [
     "**Observations**\n",
-    "1. Out of the 28,823 tweets on which the currently used (naive) ML model is being evaluated, the model predicted that\n",
-    "   - 14,443 tweets need support\n",
-    "   - 14,380 tweets do not need support\n",
+    "1. Out of the 21,282 tweets on which the currently used (naive) ML model is being evaluated, the model predicted that\n",
+    "   - 10,717 tweets need support\n",
+    "   - 10,565 tweets do not need support\n",
     "\n",
     "   In reality\n",
-    "   - 2,918 tweets need support\n",
-    "   - 25,905 tweets do not need support\n",
+    "   - 965 tweets need support\n",
+    "   - 20,317 tweets do not need support\n",
     "\n",
-    "   This means (14,443 - 2,918) 11,525 (or approx. 40%) of the available tweets would unnecessarily be read (and responded to) by the mission team members who are acting in a support capacity, in order to mitigate negative sentiment on Twitter. If we **assume an average combined reading and responding time of one minute per tweet**, then this would amount to (11,525 tweets X 0.50 sec/tweet / 60 sec/min) an average of 96 hours of time wasted reading tweets that did not express a negative sentiment about the mission on the platform."
+    "   This means 9,752 (10,717 - 965, or approx. 45%) of the available tweets would unnecessarily be read (and responded to) by the mission team members who are acting in a support capacity, in order to mitigate negative sentiment on Twitter. If we **assume an average combined reading and responding time of one minute per tweet**, then this would amount to (9,752 tweets X 0.50 sec/tweet X 1 min/60 sec) an average of 81 hours of time wasted reading tweets that did not express a negative sentiment about the mission on the platform."
    ]
   },
   {
