--- a/v2/3_combine_data.ipynb
+++ b/v2/3_combine_data.ipynb
@@ -352,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_bucket_name = os.getenv(\"AWS_S3_BUCKET_NAME\", \"sagemakertestwillz3s\")\n",
+    "s3_bucket_name = os.getenv(\"AWS_S3_BUCKET_NAME\", \"\")\n",
     "session = boto3.Session(profile_name=\"default\")\n",
     "s3_client = session.client(\"s3\")\n",
     "\n",
