--- a/v2/4_filter_data.ipynb
+++ b/v2/4_filter_data.ipynb
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_bucket_name = os.getenv(\"AWS_S3_BUCKET_NAME\", \"sagemakertestwillz3s\")\n",
+    "s3_bucket_name = os.getenv(\"AWS_S3_BUCKET_NAME\", \"\")\n",
     "\n",
     "joined_tweet_search_terms_no_spaces = [\n",
     "    t.replace(\" \", \"\") for t in joined_tweet_search_terms\n",
